# bulletrl

./: .gitignore  Cargo.toml  README.md  bulletrl_env.py  bullettest_env.py  eval.py  train.py
bulletrl_common/: Cargo.toml
bulletrl_common/src/: lib.rs
bulletrl_th6/: Cargo.toml  training.cfg
bulletrl_th6/src/: lib.rs
bulletrl_th6/src/th6/: mod.rs  offsets.rs  patch.rs  types.rs
bullettest/: Cargo.toml  README.md
bullettest/src/: backend.rs  game.rs  util.rs
src/: backend.rs  game.rs  main.rs  util.rs
