[package]
name = "bulletrl_th6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minhook-sys = "0.1.1"
env_logger = "0.9.0"
log = "0.4.17"
null_fn = "0.1.1"
quick_detour = { git = "https://github.com/khang06/quick_detour.git" }
static_assertions = { version = "1.1.0", features = ["nightly"] }
windows = { version = "0.42.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Memory"] }
bulletrl_common = { path = "../bulletrl_common" }
minifb = { version = "0.23.0", optional = true }
bitflags = "1.3.2"
rand = "0.8.5"

[features]
renderer_debug = ["dep:minifb"]
console = []

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
