[package]
name = "bullettest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.9.1"
byteorder = "1.4.3"
env_logger = "0.9.0"
log = "0.4.16"
minifb = "0.23.0"
rand = "0.8.5"
bulletrl_common = { path = "../bulletrl_common" }